--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
       <br>
       <article>
-        if you have any other Korean restaurants suggestion, please <a href = "mailto: cxhan@umich.edu">email me </a>
+        I'd love to know if you have any other Korean restaurants suggestions, if you do, please <a href = "mailto: cxhan@umich.edu">email me</a>.
       </article>
     </section>
 
